# opfor-engine

./: .gitignore  .gitmodules  README.md  bootstrap.sh  meson.build  premake5.lua
.github/workflows/: msbuild.yml
assets/levels/: 42Run.level.bak  pbr.level
assets/models/metal-sphere/: metal-sphere.glb
assets/scripts/: world.lua
models/42Run/MapTiles/: Cluster-Ceiling.gltf  Cluster-Desk.gltf  Cluster-Door-Ceiling.gltf  Cluster-Door.gltf  Cluster-Empty.gltf  Cluster-Floor.gltf  Cluster-Pillar.gltf  Cluster-Table-iMac.gltf  Cluster-Wall.gltf  Cluster-Window-Ceiling.gltf  Cluster-Window.gltf
models/42Run/Marvin/: scene.gltf
opfor/: meson.build  premake5.lua
opfor-editor/: imgui.ini  meson.build  premake5.lua
opfor-editor/assets/levels/: 42Run.level  level.schema  sponza.level
opfor-editor/assets/models/animated-cube/: animated-cube.gltf
opfor-editor/assets/models/metal-sphere/: metal-sphere.gltf
opfor-editor/assets/models/planet-sphere/: planet-sphere.gltf
opfor-editor/assets/scripts/: custom_script.lua
opfor-editor/config/: RefurekuSettings.toml
opfor-editor/shaders/: basic.glsl  billboard.glsl  brdf-precompute.glsl  convolute.glsl  image.glsl  light.glsl  prefilter.glsl  shadow.glsl  sky.glsl  skybox.glsl  ui.glsl
opfor-editor/src/: OpforEditor.cpp  SpheresRotateSystem.hpp
opfor-tests/: premake5.lua
opfor/config/: RefurekuSettings.toml
opfor/include/: ecs.hpp  editor.hpp  opfor.hpp
opfor/src/: opfor.hpp  renderer.hpp
opfor/src/backend/opengl/: OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLContext.cpp  OpenGLContext.hpp  OpenGLConversions.hpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.hpp  OpenGLRenderbuffer.cpp  OpenGLRenderbuffer.hpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp  imgui_impl_opengl3.cpp
opfor/src/components/: AnimationComponent.hpp  BatchComponent.hpp  DirectionalLightComponent.hpp  DisplayComponent.hpp  ImguiComponent.hpp  MeshComponent.hpp  ModelComponent.hpp  PlayerCameraComponent.hpp  PlayerInputComponent.hpp  PointLightComponent.hpp  SelectedComponent.hpp  SkyboxComponent.hpp  TransformComponent.hpp
opfor/src/opfor/: Application.cpp  Application.hpp  Batch.cpp  Batch.hpp  Callback.hpp  Cubemap.hpp  EngineMain.cpp  EngineObject.hpp  EntryPoint.hpp  GBuffer.cpp  GBuffer.hpp  ILevel.hpp  LayerStack.cpp  Level.hpp  LuaRuntime.hpp  Mesh.cpp  Mesh.hpp  Model.hpp  ShaderManager.hpp  Texture.cpp  Texture.hpp  TextureAutoBind.hpp  Time.hpp  lualib.cpp  lualib.h  nfd.hpp  tinygltf.cpp
opfor/src/opfor/assimp/: Mesh.hpp  Model.cpp  Model.hpp
opfor/src/opfor/core/: Action.hpp  AnimationSystem.cpp  AnimationSystem.hpp  Application.cpp  Application.hpp  Callback.hpp  EngineObject.hpp  EntryPoint.hpp  ImageLoader.cpp  ImageLoader.hpp  Input.cpp  Input.hpp  LevelSerializer.hpp  Logger.hpp  Math.cpp  Math.hpp  Scene.hpp  Window.cpp  Window.hpp  base.hpp  log.hpp
opfor/src/opfor/ecs/: Component.hpp  ECSEngine.cpp  ECSEngine.hpp  Entity.cpp  Entity.hpp  EntityManager.hpp  System.hpp  SystemManager.hpp  ecs.hpp
opfor/src/opfor/editor/: CustomEditorProperty.hpp  Editor.cpp  Editor.hpp  EditorGUI.hpp  EditorInspector.cpp  EditorInspector.hpp  (+14 more)
opfor/src/platform/: Platform.hpp
opfor/src/systems/: BeginSceneSystem.hpp  CameraMovementSystem.hpp  EndSceneSystem.hpp  ImguiSystem.hpp  LuaSystem.hpp  MeshRendererSystem.hpp  SkyboxRendererSystem.hpp
sandbox/: meson.build
sandbox/src/: Sandbox.cpp  main.cpp
scripts/: custom_script.lua
shaders/: basic.fs.glsl  basic.vs.glsl  billboard.fs.glsl  billboard.vs.glsl  button.fs.glsl  button.glsl  button.vs.glsl  cubemap.fs.glsl  cubemap.vs.glsl  fb.fs.glsl  fb.vs.glsl  hdri-cubemap-projection.glsl  light.fs.glsl  light.glsl  shadow.fs.glsl  shadow.gs.glsl  shadow.vs.glsl  skybox.glsl  ssao.fs.glsl  ssao.glsl  ssao.vs.glsl  ssaoblur.fs.glsl  ssaoblur.glsl  ui.fs.glsl  ui.vs.glsl
src/: CameraMovementSystem.hpp  DummyComponent.hpp  MeshComponent.hpp  MeshRendererSystem.hpp  WorldObject.hpp  main.cpp
src/components/: BoxColliderComponent.hpp  DirectionalLightComponent.hpp  DisplayComponent.hpp  LuaScriptComponent.hpp  MeshComponent.hpp  ModelComponent.hpp  PlayerCameraComponent.hpp  PointLightComponent.hpp  Run42Player.hpp  SkyboxComponent.hpp  TextComponent.hpp  TransformComponent.hpp
src/engine/: Action.hpp  Batch.cpp  Batch.hpp  Cubemap.cpp  DevScene.hpp  Engine.cpp  Engine.hpp  EngineMain.cpp  EngineObjects.hpp  Framebuffer.cpp  Framebuffer.hpp  GBuffer.hpp  ILevel.hpp  ImageLoader.cpp  ImageLoader.hpp  Level.hpp  Logger.hpp  LuaRuntime.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.hpp  Scene.hpp  ShaderManager.hpp  Texture.cpp  Texture.hpp  TextureAutoBind.hpp  TextureManager.cpp  TextureManager.hpp  Time.hpp  lualib.cpp  nfd.hpp  tinygltf.cpp
src/engine/assimp/: Mesh.hpp  Model.cpp  Model.hpp
src/engine/core/: Input.cpp  Input.hpp  Window.cpp  Window.hpp  base.hpp
src/engine/ecs/: ECSEngine.hpp  Entity.cpp  Entity.hpp  EntityManager.hpp  System.hpp  SystemManager.hpp  ecs.hpp
src/engine/platform/: Platform.hpp
src/engine/renderer/: Buffer.cpp  Buffer.hpp  Context.cpp  Context.hpp  Framebuffer.cpp  Framebuffer.hpp  RenderCommand.cpp  RenderCommand.hpp  Renderbuffer.cpp  Renderbuffer.hpp  Renderer.cpp  Renderer.hpp  RendererAPI.cpp  RendererAPI.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp
src/engine/ui/: Anchor.cpp  Button.cpp  Image.hpp  MainMenuBackground.cpp  MainMenuBackground.hpp  PlayerHUDScene.hpp  SceneComponent.cpp  SceneComponent.hpp  TextRenderer.hpp  UI.cpp
src/engine/utils/: Settings.hpp
src/levels/: MainLevel.hpp
src/scenes/: PlayScene.hpp
src/systems/: BeginSceneSystem.hpp  CameraMovementSystem.hpp  Collision2DSystem.hpp  Collision3DSystem.hpp  EndSceneSystem.hpp  FramebufferRendererSystem.hpp  ImguiSystem.hpp  LuaSystem.hpp  MeshRendererSystem.hpp  Run42PlayerSystem.hpp  SkyboxRendererSystem.hpp  TextRendererSystem.hpp
tests/: meson.build
tests/ecs/: entity.cpp  meson.build  tests.cpp
(+146 files in other folders)
